--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.0.1",
+    "@mdx-js/react": "^3.0.1",
+    "@next/mdx": "^14.2.4",
     "@radix-ui/react-icons": "^1.3.0",
+    "@types/mdx": "^2.0.13",
     "framer-motion": "^11.2.11",
     "next": "14.2.4",
     "react": "^18",
